test/tests/errors/error-record-cannot-ref.sm
// true
// false
/**/
/**/

program {
    record person(name, age);
    ref x = person;
}